full Political Bndy
full Political Bndy

--- a/index.htm
+++ b/index.htm
@@ -430,10 +430,10 @@
                                 <a href="#map" data-toggle="modal" data-target="#modal_4" ><div class="panelinfo group4_panel"> </div></a>
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_" href="#Group_4">
                                     <div class="panellink group4_panel">
-                                        <span>Congressional and State Legislative Districts</span>
+                                        <span>US Congressional and State Legislative Districts</span>
                                     </div>
                                 </a>
-                                <a class="checked_all togglebox"></a>
+                               <!-- <a class="checked_all togglebox"></a> -->
                             </div> 
                             <div id="Group_4" class="panel-collapse collapse in">
                                 <div class="panel-body legPanel" style="padding: 0;">
@@ -441,6 +441,15 @@
                                 </div>
                                 <div class="panel-body legPanel" style="padding: 0;">
                                  <input type="checkbox" name="LayerCont" id="layer9" class="dyna layer" z-index="8">
+                                </div>
+                                <div class="panel-body legPanel" style="padding: 0;">
+                                 <input type="checkbox" name="LayerCont" id="layer10" class="dyna layer" z-index="8">
+                                </div>
+                                 <div class="panel-body legPanel" style="padding: 0;">
+                                 <input type="checkbox" name="LayerCont" id="layer11" class="dyna layer" z-index="8">
+                                </div>
+                                <div class="panel-body legPanel" style="padding: 0;">
+                                 <input type="checkbox" name="LayerCont" id="layer12" class="dyna layer" z-index="8">
                                 </div>
                             </div>
                         </div>
@@ -670,10 +679,11 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Congressional and State Legislative Distrcits</h4>
+                        <h4 class="modal-title">US Congressional and State Legislative Distrcits Boundaries</h4>
                     </div>
                     <div class="modal-body">
-                    Various Political Boundaries for referecne.
+                    <p>New Jersey political boundaries obtained from <a href="https://njgin.nj.gov/njgin" target="_new"> New Jersey Geographic Information Network (NJGIN)</a></p>
+                    <p> Pennsylvania political boundaries obtained from <a href="https://www.pasda.psu.edu/" target="_new"> Pennsylvania Spatial Data Access (PASDA)</a>
                     </div>
                     <div class="modal-footer">
                         
